<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#265087"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Example@untels.edu.pe"
        android:inputType="textEmailAddress"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textCorreo"
        app:layout_constraintTop_toBottomOf="@+id/textCorreo" />

    <TextView
        android:id="@+id/textCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/baseline_attach_email_24"
        android:text="@string/text_correo"
        android:textColor="#e2b142"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

    <TextView
        android:id="@+id/textClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:drawableLeft="@drawable/baseline_key_24"
        android:text="@string/text_clave"
        android:textColor="#e2b142"
        app:layout_constraintStart_toStartOf="@+id/editTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Nombre Completo"
        android:inputType="textPersonName"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textNombresCompletos"
        app:layout_constraintTop_toBottomOf="@+id/textNombresCompletos" />

    <TextView
        android:id="@+id/textFechaNacimiento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/baseline_date_range_24"
        android:text="@string/text_Fecha_Nacimiento"
        android:textColor="#e2b142"
        app:layout_constraintBottom_toBottomOf="@+id/textClave"
        app:layout_constraintStart_toStartOf="@+id/editTextDate"
        app:layout_constraintTop_toTopOf="@+id/textClave" />

    <TextView
        android:id="@+id/textNombresCompletos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:drawableLeft="@drawable/baseline_drive_file_rename_outline_24"
        android:text="@string/text_nombres_completos"
        android:textColor="#e2b142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSubtitulo" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:ems="10"
        android:inputType="date"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/editTextTextPassword"
        app:layout_constraintStart_toEndOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toTopOf="@+id/editTextTextPassword" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Clave"
        android:inputType="textPassword"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textClave"
        app:layout_constraintTop_toBottomOf="@+id/textClave" />

    <TextView
        android:id="@+id/textTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/text_titulo"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSubtitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/text_subtitulo"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/textTitulo"
        app:layout_constraintStart_toStartOf="@+id/textTitulo"
        app:layout_constraintTop_toBottomOf="@+id/textTitulo" />

    <TextView
        android:id="@+id/textCarrera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/text_carrera"
        android:textColor="#e2b142"
        app:layout_constraintStart_toStartOf="@+id/editTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <TextView
        android:id="@+id/textMedio"
        android:layout_width="190dp"
        android:layout_height="33dp"
        android:layout_marginStart="130dp"
        android:text="@string/text_medio"
        android:textColor="#e2b142"
        app:layout_constraintBottom_toBottomOf="@+id/textCarrera"
        app:layout_constraintStart_toEndOf="@+id/textCarrera"
        app:layout_constraintTop_toTopOf="@+id/textCarrera" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/textCarrera"
        app:layout_constraintTop_toBottomOf="@+id/textCarrera">

        <RadioButton
            android:id="@+id/radioButtonIngSist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Ing_Sistemas"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonIngAmbi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Ing_Ambiental"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonIngMeca"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Ing_Mecanica"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/radioButtonAdmi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radiobutton_Admi"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </RadioGroup>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/checkbox_medios_rad"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/textMedio"
        app:layout_constraintTop_toBottomOf="@+id/textMedio" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_medios_inter"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/checkBox"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_medios_amigo"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/checkBox2"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_medios_publi"
        android:textColor="@color/white"
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="@+id/checkBox3"
        app:layout_constraintTop_toBottomOf="@+id/checkBox3" />

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:backgroundTint="#e2b142"
        android:drawableRight="@drawable/baseline_send_24"
        android:text="@string/button_enviar"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/textUntels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/text_Untels"
        android:textColor="#fff"
        app:layout_constraintStart_toStartOf="@+id/textCarrera"
        app:layout_constraintTop_toBottomOf="@+id/buttonEnviar" />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_email"
        android:textColor="#fff"
        app:layout_constraintStart_toEndOf="@+id/imageEmail"
        app:layout_constraintTop_toBottomOf="@+id/textDireccion" />

    <ImageView
        android:id="@+id/imageEmail"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textEmail"
        app:layout_constraintStart_toStartOf="@+id/imageDireccion"
        app:layout_constraintTop_toTopOf="@+id/textEmail"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/sobre" />

    <TextView
        android:id="@+id/textDireccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/text_direccion"
        android:textColor="#fff"
        app:layout_constraintStart_toEndOf="@+id/imageDireccion"
        app:layout_constraintTop_toBottomOf="@+id/textUntels" />

    <ImageView
        android:id="@+id/imageDireccion"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textDireccion"
        app:layout_constraintStart_toStartOf="@+id/textUntels"
        app:layout_constraintTop_toTopOf="@+id/textDireccion"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/marcador" />

    <TextView
        android:id="@+id/textTelefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_telefono"
        android:textColor="#fff"
        app:layout_constraintStart_toEndOf="@+id/imageTelefono"
        app:layout_constraintTop_toBottomOf="@+id/textEmail" />

    <ImageView
        android:id="@+id/imageTelefono"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/textTelefono"
        app:layout_constraintStart_toStartOf="@+id/imageEmail"
        app:layout_constraintTop_toTopOf="@+id/textTelefono"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/llamada_telefonica" />

    <TextView
        android:id="@+id/textoDirecciom"
        android:layout_width="300dp"
        android:layout_height="36dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="Campus - Sector 3 Grupo 1A 03 - Cercado (Av. Central y Av. Bolivar) Villa El Salvador"
        app:layout_constraintBottom_toBottomOf="@+id/textDireccion"
        app:layout_constraintStart_toEndOf="@+id/textDireccion"
        app:layout_constraintTop_toTopOf="@+id/textDireccion" />

    <TextView
        android:id="@+id/textoEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="admision@untels.edu.pe"
        app:layout_constraintBottom_toBottomOf="@+id/textEmail"
        app:layout_constraintStart_toStartOf="@+id/textoDirecciom"
        app:layout_constraintTop_toTopOf="@+id/textEmail" />

    <TextView
        android:id="@+id/textoNumero"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="(01) 715 8878"
        app:layout_constraintBottom_toBottomOf="@+id/textTelefono"
        app:layout_constraintStart_toStartOf="@+id/textoEmail"
        app:layout_constraintTop_toTopOf="@+id/textTelefono" />

</androidx.constraintlayout.widget.ConstraintLayout>